new project commit

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
         <div>
             <label for="name">Student name:</label>
             <input type="text" name="studentname" id="name">
-        </div><br>
+        </div>
         <button type="submit" name="submit" onclick="formvalidation();" id="reg_submit" >Register</button>
 </main>
 </body>
